avance del portfolio

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
         <ul class="nav-links">
             <li class="link"><a href="#">Inicio</a></li>
-            <li id="link1" class="link"><a href="">características</a></li>
-            <li id="link2" class="link"><a href="">Presupuesto</a></li>
+            <li id="link1" class="link"><a href="#caracteristicas">características</a></li>
+            <li id="link2" class="link"><a href="#presupuesto">Presupuesto</a></li>
             <li id="link3" class="link"><a href="">Acerca De</a></li>
         </ul>
         <button class="btn">Contratame</button>
@@ -44,7 +44,7 @@
     </header>
 
     <section class="container">
-        <h2 class="header">NUESTRAS CARACTERÍSTICAS</h2>
+        <h2 id="caracteristicas" class="header">NUESTRAS CARACTERÍSTICAS</h2>
         <div class="features">
             <div class="card one ">
                 <span><i class="ri-bug-line"></i></span>
@@ -67,11 +67,29 @@
         </div>
     </section>
 
+    <section class="container">
+        <h2 class="header">NUESTROS TRABAJOS</h2>
+        <div class="ilustration">
+            <div class="pages-ilustration">
+                <h4>Road Cycling</h4>
+                <img src="./images/roadcycling.png">
+            </div>
+            <div class="pages-ilustration">
+                <h4>Road Cycling</h4>
+                <img src="./images/roadcycling.png">
+            </div>
+            <div class="pages-ilustration">
+                <h4>Road Cycling</h4>
+                <img src="./images/roadcycling.png">
+            </div>
+        </div>
+    </section>
+
     <section class="container-project">
         <div class="box">
-            <div class="columns level">
+            <div id="presupuesto" class="columns level">
                 <div class="column level-item">
-                    <h1 class="title">Iniciar Projecto</h1>
+                    <h1 class="title">Iniciar Proyecto</h1>
                 </div>
                 <div class="column level-item">
                     <p>Interesado en trabajar juntos? Deberiamos hacerlo, Contactame.</p>
@@ -79,7 +97,7 @@
                 <div class="column level-item">
                     <a href="./budgetform.html" class="button">
                         <span class="icon"></span>
-                        <span>hagámoslo</span>
+                        <span>Hagámoslo</span>
                 </a>
                 </div>
             </div>
