--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
+    <!-- <script src="./script.js"></script> -->
     <link rel="stylesheet" href="style.css">
     <title>Personal Portfolio</title>
 </head>
@@ -20,9 +21,10 @@
 
         <ul class="nav-links">
             <li class="link"><a href="#">Inicio</a></li>
-            <li id="link1" class="link"><a href="#caracteristicas">características</a></li>
-            <li id="link2" class="link"><a href="#presupuesto">Presupuesto</a></li>
-            <li id="link3" class="link"><a href="">Acerca De</a></li>
+            <li id="link1" class="link"><a href="">Características</a></li>
+            <li id="link2" class="link"><a href="#trabajos">Nuestros Trabajos</a></li>
+            <li id="link3" class="link"><a href="#presupuesto">Presupuesto</a></li>
+            <li id="link4" class="link"><a href="#footer">Acerca De</a></li>
         </ul>
         <button class="btn">Contratame</button>
     </nav>
@@ -36,7 +38,7 @@
             <p>
                 Soy un apasionado de la creación de experiencias web atractivas y funcionales, y estoy convencido de que mi combinación de habilidades técnicas y creativas puede contribuir significativamente a su equipo.
             </p>
-            <button class="btn">Get Started</button>
+            <button class="btn">Empezar</button>
         </div>
         <div class="image">
             <img src="images/header.png">
@@ -67,16 +69,23 @@
         </div>
     </section>
 
-    <section class="container">
+    <section id="trabajos" class="container ilus">
         <h2 class="header">NUESTROS TRABAJOS</h2>
         <div class="ilustration">
             <div class="pages-ilustration">
                 <h4>Road Cycling</h4>
                 <img src="./images/roadcycling.png">
+                <p>Road Cycling es un Sitio Web que cuenta con un inicio y 4 paginas.<p>
+                <p>Cuenta con una galeria de fotos de 36 imagenes las cuales cuentan con animaciones.</p>
+                <p>2 de las 5 paginas cuentan con videos extraidos de YouTube.</p>
+                <p>Todas las paginas son Responsivas. Es decir; se adapta a distintos tamaños de pantalla.</p>
             </div>
             <div class="pages-ilustration">
-                <h4>Road Cycling</h4>
-                <img src="./images/roadcycling.png">
+                <h4>Genoud Distribuciones</h4>
+                <img src="./images/genouddistribuciones.png">
+                <p>Genoud Distribuciones es un Sitio Web en desarrollo que cuenta con un inicio y 4 paginas.</p>
+                <p>En el inicio cuenta con una galeria de fotos en carrousel de 10 imagenes.</p>
+                <p>Todas las paginas son Responsivas. Es decir: se adapta a distintos tamaños de pantalla.</p>
             </div>
             <div class="pages-ilustration">
                 <h4>Road Cycling</h4>
@@ -103,7 +112,7 @@
             </div>
         </div>
     </section>
-    <footer class="container">
+    <footer id="footer" class="container">
         <span class="blur"></span>
         <span class="blur"></span>
         <div class="column">
@@ -133,7 +142,7 @@
     </div>
 
 
-    <script src="./script.js"></script>
+
 </body>
 
 </html>
