--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
         <ul class="nav-links">
             <li class="link"><a href="#">Inicio</a></li>
-            <li id="link1" class="link"><a href="">Características</a></li>
+            <li id="link1" class="link"><a
+                href="#caracteristicas">Características</a></li>
             <li id="link2" class="link"><a href="#trabajos">Nuestros Trabajos</a></li>
             <li id="link3" class="link"><a href="#presupuesto">Presupuesto</a></li>
             <li id="link4" class="link"><a href="#footer">Acerca De</a></li>
