--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <div class="nav-logo">
             <a href="#">
-                <img src="images/logo.png">
+                <img src="images/E-code isotipo Blanco.svg">
             </a>
         </div>
 
@@ -118,7 +118,7 @@
         <span class="blur"></span>
         <div class="column">
             <div class="logo">
-                <img src="images/logo.png">
+                <img src="images/E-code isotipo Blanco.svg">
             </div>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
