--- a/index.html
+++ b/index.html
@@ -27,19 +27,18 @@
             <li id="link3" class="link"><a href="#presupuesto">Presupuesto</a></li>
             <li id="link4" class="link"><a href="#footer">Acerca De</a></li>
         </ul>
-        <button class="btn">Contratame</button>
+        <a href="./budgetform.html" class="btn">Contratame</a>        
     </nav>
 
     <header class="container">
         <div class="content">
             <span class="blur"></span>
             <span class="blur"></span>
-            <h4>CREATE YOUR SITE LIKE A PRO</h4>
             <H1>Hola, Soy <span>Estanislao</span>, Desarrollador Web</H1>
             <p>
                 Soy un apasionado de la creación de experiencias web atractivas y funcionales, y estoy convencido de que mi combinación de habilidades técnicas y creativas puede contribuir significativamente a su equipo.
             </p>
-            <button class="btn">Empezar</button>
+            <a href="./budgetform.html" class="btn">Empezar</a>
         </div>
         <div class="image">
             <img src="images/header.png">
@@ -55,7 +54,7 @@
                 <p>
                     ¿Tienes algún problema en tus códigos? dime te ayudaré a arreglarlo.
                 </p>
-                <a href="#">
+                <a href="./budgetform.html">
                     Únete ahora <i class="ri-arrow-right-line"></i>
                 </a>
             </div>
@@ -65,32 +64,48 @@
                 <p>
                     ¿quieres que trabajemos juntos? Escríbenos un correo electrónico y lo leeremos..
                 </p>
-                <a href="#">Únete ahora <i class="ri-arrow-right-line"></i></a>
+                <a href="./budgetform.html">Únete ahora <i class="ri-arrow-right-line"></i></a>
             </div>
         </div>
     </section>
 
     <section id="trabajos" class="container ilus">
         <h2 class="header">NUESTROS TRABAJOS</h2>
-        <div class="ilustration">
-            <div class="pages-ilustration">
-                <h4>Road Cycling</h4>
-                <img src="./images/roadcycling.png">
-                <p>Road Cycling es un Sitio Web que cuenta con un inicio y 4 paginas.<p>
-                <p>Cuenta con una galeria de fotos de 36 imagenes las cuales cuentan con animaciones.</p>
-                <p>2 de las 5 paginas cuentan con videos extraidos de YouTube.</p>
-                <p>Todas las paginas son Responsivas. Es decir; se adapta a distintos tamaños de pantalla.</p>
-            </div>
-            <div class="pages-ilustration">
-                <h4>Genoud Distribuciones</h4>
-                <img src="./images/genouddistribuciones.png">
-                <p>Genoud Distribuciones es un Sitio Web en desarrollo que cuenta con un inicio y 4 paginas.</p>
-                <p>En el inicio cuenta con una galeria de fotos en carrousel de 10 imagenes.</p>
-                <p>Todas las paginas son Responsivas. Es decir: se adapta a distintos tamaños de pantalla.</p>
-            </div>
-            <div class="pages-ilustration">
-                <h4>Road Cycling</h4>
-                <img src="./images/roadcycling.png">
+            <div class="contaider-card">
+                <section class="card-section">
+                    <div class="card">
+                        <div class="card-header"><h4>Road Cycling</h4></div>
+                        <div class="card-body">
+                            <img src="./images/roadcycling.png">
+                                <p>Road Cycling es un Sitio Web que cuenta con un inicio y 4 paginas.<p>
+                                <p>Cuenta con una galeria de fotos de 36 imagenes las cuales cuentan con animaciones<p>
+                                <p>2 de las 5 paginas cuentan con videos extraidos de YouTube.</p>
+                                <p>Todas las paginas son Responsivas. Es decir; se adapta a distintos tamaños de pantalla.</p>
+                                <a href="./budgetform.html">Únete ahora <i class="ri-arrow-right-line"></i></a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header"><h4>Genoud Distribuciones<h4></div>
+                        <div class="card-body gd">
+                            <img src="./images/genouddistribuciones.png">
+                            <p>Genoud Distribuciones es un Sitio Web en desarrollo que cuenta con un inicio y 4 paginas.</p>
+                            <p>En el inicio cuenta con una galeria de fotos en carrousel de 10 imagenes.</p>
+                            <p>Todas las paginas son Responsivas. Es decir: se adapta a distintos tamaños de pantalla.</p>
+                            <a href="./budgetform.html">Únete ahora <i class="ri-arrow-right-line"></i></a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header"><h4>Road Cycling</h4></div>
+                        <div class="card-body">
+                            <img src="./images/roadcycling.png">
+                                <p>Road Cycling es un Sitio Web que cuenta con un inicio y 4 paginas.<p>
+                                <p>Cuenta con una galeria de fotos de 36 imagenes las cuales cuentan con animaciones<p>
+                                <p>2 de las 5 paginas cuentan con videos extraidos de YouTube.</p>
+                                <p>Todas las paginas son Responsivas. Es decir; se adapta a distintos tamaños de pantalla.</p>
+                                <a href="./budgetform.html">Únete ahora <i class="ri-arrow-right-line"></i></a>
+                        </div>
+                    </div>
+                </section>
             </div>
         </div>
     </section>
@@ -120,9 +135,6 @@
             <div class="logo">
                 <img src="images/E-code isotipo Blanco.svg">
             </div>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </p>
             <div class="socials">
                 <a href="https://www.instagram.com/estani_genoud/" target="_blank"><i class="ri-instagram-line"></i></a>
                 <a href="https://www.linkedin.com/in/estanislao-genoud-a6946020b/" target="_blank"><i class="ri-linkedin-line"></i></a>
