finalizado con meta tags y correccion de textos

--- a/budgetform.html
+++ b/budgetform.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portafolio de Estanislao Genoud, Desarrollador Web">
+    <meta name="keywords" content="Desarrollador Web, Portafolio, Proyectos, Cooperación, Presupuesto">
+    <meta name="author" content="Estanislao Genoud">
+    <link rel="icon" href="./images/header.png" type="image/x-icon">
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
     <!-- Custom styles -->
     <link rel="stylesheet" href="./style.css">
-    <title>Personal Portfolio</title>
+    <title>PortFolio Estanislao Genoud</title>
 </head>
 
 <body>
@@ -15,7 +19,7 @@
     <nav>
         <div class="nav-logo">
             <a href="#">
-                <img src="./images/E-code isotipo Blanco.svg">
+                <img src="./images/E-code isotipo Blanco.svg" alt="Logo de la marca E-code">
             </a>
         </div>
 
@@ -31,8 +35,8 @@
     </nav>
     <div class="container-form">
         <div class="info-form">
-            <h2>Formulario de contacto</h2>
-            <p>Este formulario de contacto nos va a servir para coordinar una primer reunion ya sea virtual o presencial, en el cual nos vas a indicar que tipo de trabajo queres realizar, si utilizamos una de nuestras plantillas ya definidas o más customizado.</p>
+            <h2>Formulario de contacto:</h2>
+            <p>Este formulario nos será útil para coordinar una primera reunión, ya sea virtual o presencial. Durante la misma, podrás indicarnos qué tipo de trabajo deseas realizar, si prefieres utilizar una de nuestras plantillas predefinidas o si buscas algo más personalizado.</p>
             <a href=""><i class="ri-mail-line"></i>estanicodeg@gmail.com</a>
             <a href=""><i class="ri-phone-line"></i>+54 9 3329-559691</a>
             <a href=""><i class="ri-road-map-line"></i>San Pedro, Buenos Aires, Argentina</a>
@@ -48,26 +52,26 @@
             <select name="favoriteOnly" id="favoriteOnly" class="campo">
                 <option>-</option>
                 <option>Arreglo de bugs</option>
-                <option>Correccion de codigo</option>
-                <option>Pagina Web</option>
+                <option>Corrección de codigo</option>
+                <option>Página Web</option>
                 <option>Sitio Web</option>
                 <option>E-Commerce</option>
                 
             </select>
-            <label for="cantidad">Cantidad de paginas</label>
+            <label for="cantidad">Cantidad de Páginas</label>
             <select name="cantidad" id="cantidad" class="campo">
                 <option>-</option>
-                <option>1 pagina</option>
-                <option>2 paginas</option>
-                <option>3 paginas</option>
-                <option>4 paginas</option>
-                <option>5 o Más paginas</option>
+                <option>1 página</option>
+                <option>2 páginas</option>
+                <option>3 páginas</option>
+                <option>4 páginas</option>
+                <option>5 o Más páginas</option>
 
             </select>
             <label for="plantilla">Plantilla Personalizada</label>
             <select name="plantilla" id="plantilla" class="campo">
                 <option>-</option>
-                <option>Si</option>
+                <option>Sí</option>
                 <option>No</option>
             </select>
             <label for="presupuesto">Presupuesto</label>
@@ -79,7 +83,7 @@
                 <option>5000 o Más</option>
             </select>
 
-            <textarea name="mensaje" placeholder="Contanos tu idea para una proxima reunion virtual o presencial"></textarea>
+            <textarea name="mensaje" placeholder="Cuéntanos tu idea para una próxima reunión, ya sea virtual o presencial."></textarea>
             <input type="submit" name="enviar" value="enviar mensaje" class="btn">
         </form>
     </div>
@@ -90,8 +94,8 @@
         <span class="blur"></span>
         <div class="column">
             <div class="socials">
-                <a href="https://www.instagram.com/estani_genoud/" target="_blank"><i class="ri-instagram-line"></i></a>
-                <a href="https://www.linkedin.com/in/estanislao-genoud-a6946020b/" target="_blank"><i class="ri-linkedin-line"></i></a>
+                <a href="https://www.instagram.com/estani_genoud/" target="_blank" rel="noopener noreferrer"><i class="ri-instagram-line"></i></a>
+                <a href="https://www.linkedin.com/in/estanislao-genoud-a6946020b/" target="_blank" rel="noopener noreferrer"><i class="ri-linkedin-line"></i></a>
                 <a href="#"><i class="ri-mail-line"></i></a>
             </div>
         </div>
