--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portafolio de Estanislao Genoud, Desarrollador Web">
+    <meta name="keywords" content="Desarrollador Web, Portafolio, Proyectos, Cooperación, Presupuesto">
+    <meta name="author" content="Estanislao Genoud">
+    <link rel="icon" href="./images/header.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css">
     <!-- <script src="./script.js"></script> -->
     <link rel="stylesheet" href="style.css">
-    <title>Personal Portfolio</title>
+    <title>PortFolio Estanislao Genoud</title>
 </head>
 
 <body>
@@ -34,7 +38,7 @@
         <div class="content">
             <span class="blur"></span>
             <span class="blur"></span>
-            <H1>Hola, Soy <span>Estanislao</span>, Desarrollador Web</H1>
+            <h1>Hola, Soy <span>Estanislao</span>, Desarrollador Web</h1>
             <p>
                 Soy un apasionado de la creación de experiencias web atractivas y funcionales, y estoy convencido de que mi combinación de habilidades técnicas y creativas puede contribuir significativamente a su equipo.
             </p>
@@ -77,20 +81,20 @@
                         <div class="card-header"><h4>Road Cycling</h4></div>
                         <div class="card-body">
                             <img src="./images/roadcycling.png">
-                                <p>Road Cycling es un Sitio Web que cuenta con un inicio y 4 paginas.<p>
-                                <p>Cuenta con una galeria de fotos de 36 imagenes las cuales cuentan con animaciones<p>
-                                <p>2 de las 5 paginas cuentan con videos extraidos de YouTube.</p>
-                                <p>Todas las paginas son Responsivas. Es decir; se adapta a distintos tamaños de pantalla.</p>
+                                <p>Road Cycling es un Sitio Web que cuenta con un inicio y 4 páginas.<p>
+                                <p>Cuenta con una galeria de fotos de 36 imágenes, las cuales cuentan con animaciones.<p>
+                                <p>2 de las 5 páginas cuentan con videos extraídos de YouTube.</p>
+                                <p>Todas las páginas son responsivas, Es decir; se adapta a distintos tamaños de pantalla.</p>
                                 <a href="./budgetform.html">Únete ahora <i class="ri-arrow-right-line"></i></a>
                         </div>
                     </div>
                     <div class="card">
-                        <div class="card-header"><h4>Genoud Distribuciones<h4></div>
+                        <div class="card-header"><h4>Genoud Distribuciones</h4></div>
                         <div class="card-body gd">
                             <img src="./images/genouddistribuciones.png">
-                            <p>Genoud Distribuciones es un Sitio Web en desarrollo que cuenta con un inicio y 4 paginas.</p>
-                            <p>En el inicio cuenta con una galeria de fotos en carrousel de 10 imagenes.</p>
-                            <p>Todas las paginas son Responsivas. Es decir: se adapta a distintos tamaños de pantalla.</p>
+                            <p>Genoud Distribuciones es un Sitio Web en desarrollo que cuenta con un inicio y 4 páginas.</p>
+                            <p>En el inicio cuenta con una galería de fotos en carrousel de 10 imágenes.</p>
+                            <p>Todas las páginas son Responsivas, Es decir: se adapta a distintos tamaños de pantalla.</p>
                             <a href="./budgetform.html">Únete ahora <i class="ri-arrow-right-line"></i></a>
                         </div>
                     </div>
@@ -98,10 +102,10 @@
                         <div class="card-header"><h4>Road Cycling</h4></div>
                         <div class="card-body">
                             <img src="./images/roadcycling.png">
-                                <p>Road Cycling es un Sitio Web que cuenta con un inicio y 4 paginas.<p>
-                                <p>Cuenta con una galeria de fotos de 36 imagenes las cuales cuentan con animaciones<p>
-                                <p>2 de las 5 paginas cuentan con videos extraidos de YouTube.</p>
-                                <p>Todas las paginas son Responsivas. Es decir; se adapta a distintos tamaños de pantalla.</p>
+                                <p>Road Cycling es un Sitio Web que cuenta con un inicio y 4 páginas.<p>
+                                <p>Cuenta con una galeria de fotos de 36 imágenes, las cuales cuentan con animaciones.<p>
+                                <p>2 de las 5 páginas cuentan con videos extraídos de YouTube.</p>
+                                <p>Todas las páginas son responsivas, Es decir; se adapta a distintos tamaños de pantalla.</p>
                                 <a href="./budgetform.html">Únete ahora <i class="ri-arrow-right-line"></i></a>
                         </div>
                     </div>
@@ -114,10 +118,10 @@
         <div class="box">
             <div id="presupuesto" class="columns level">
                 <div class="column level-item">
-                    <h1 class="title">Iniciar Proyecto</h1>
+                    <h2 class="title">Iniciar Proyecto</h2>
                 </div>
                 <div class="column level-item">
-                    <p>Interesado en trabajar juntos? Deberiamos hacerlo, Contactame.</p>
+                    <p>¿Interesado en trabajar juntos? Deberíamos hacerlo, Contáctame.</p>
                 </div>
                 <div class="column level-item">
                     <a href="./budgetform.html" class="button">
@@ -136,8 +140,8 @@
                 <img src="images/E-code isotipo Blanco.svg">
             </div>
             <div class="socials">
-                <a href="https://www.instagram.com/estani_genoud/" target="_blank"><i class="ri-instagram-line"></i></a>
-                <a href="https://www.linkedin.com/in/estanislao-genoud-a6946020b/" target="_blank"><i class="ri-linkedin-line"></i></a>
+                <a href="https://www.instagram.com/estani_genoud/" target="_blank" rel="noopener noreferrer"><i class="ri-instagram-line"></i></a>
+                <a href="https://www.linkedin.com/in/estanislao-genoud-a6946020b/" target="_blank" rel="noopener noreferrer"><i class="ri-linkedin-line"></i></a>
                 <a href="#"><i class="ri-mail-line"></i></a>
             </div>
         </div>
