--- a/budgetform.html
+++ b/budgetform.html
@@ -18,15 +18,14 @@
     
     <nav>
         <div class="nav-logo">
-            <a href="#">
+            <a href="./index.html">
                 <img src="./images/E-code isotipo Blanco.svg" alt="Logo de la marca E-code">
             </a>
         </div>
 
         <ul class="nav-links">
             <li class="link"><a href="./index.html">Inicio</a></li>
-            <li id="link1" class="link"><a
-                href="./index.html">Características</a></li>
+            <li id="link1" class="link"><a href="./index.html">Características</a></li>
             <li id="link2" class="link"><a href="./index.html">Nuestros Trabajos</a></li>
             <li id="link3" class="link"><a href="#">Presupuesto</a></li>
             <li id="link4" class="link"><a href="./index.html">Acerca De</a></li>
