Sacando el codigo js del index html

--- a/index.html
+++ b/index.html
@@ -158,34 +158,7 @@
     </div>
 
 
-    <script>
-        // Código jQuery para desplazamiento suave
-        $(document).ready(function () {
-            $('#link1').click(function () {
-                $('html, body').animate({
-                    scrollTop: $('#caracteristicas').offset().top
-                }, 1000);
-            });
-
-            $('#link2').click(function () {
-                $('html, body').animate({
-                    scrollTop: $('#trabajos').offset().top
-                }, 1000);
-            });
-
-            $('#link3').click(function () {
-                $('html, body').animate({
-                    scrollTop: $('#presupuesto').offset().top
-                }, 1000);
-            });
-
-            $('#link4').click(function () {
-                $('html, body').animate({
-                    scrollTop: $('#footer').offset().top
-                }, 1000);
-            });
-        });
-    </script>
+    <script src="./JS/script.js"></script>
 </body>
 
 </html>
