Agregando la tarejta numero tres

--- a/index.html
+++ b/index.html
@@ -76,36 +76,37 @@
         <h2 class="header">NUESTROS TRABAJOS</h2>
             <div class="contaider-card">
                 <section class="card-section">
-                    <div class="card">
-                        <div class="card-header"><h4>Road Cycling</h4></div>
+                    <div class="card RC">
+                        <div class="card-header"><h4>Road</h4></div>
+                        <div class="card-header"><h4>Cycling</h4></div>
                         <div class="card-body">
-                            <img src="./images/roadcycling.png">
+                            <img src="./images/roadcycling.jpeg" class="imgRC">
                                 <p>Road Cycling es un Sitio Web que cuenta con un inicio y 4 páginas.<p>
                                 <p>Cuenta con una galeria de fotos de 36 imágenes, las cuales cuentan con animaciones.<p>
-                                <p>2 de las 5 páginas cuentan con videos extraídos de YouTube.</p>
                                 <p>Todas las páginas son responsivas, Es decir; se adapta a distintos tamaños de pantalla.</p>
-                                <a href="./budgetform.html">Únete ahora <i class="ri-arrow-right-line"></i></a>
+                                <a class="bRC" href="./budgetform.html">Únete ahora <i class="ri-arrow-right-line"></i></a>
                         </div>
                     </div>
-                    <div class="card">
-                        <div class="card-header"><h4>Genoud Distribuciones</h4></div>
+                    <div class="card GD">
+                        <div class="card-header"><h4>Genoud</h4></div>
+                        <div class="card-header"><h4>Distribuciones</h4></div>
                         <div class="card-body gd">
-                            <img src="./images/genouddistribuciones.png">
+                            <img src="./images/genouddistribuciones.jpeg">
                             <p>Genoud Distribuciones es un Sitio Web en desarrollo que cuenta con un inicio y 4 páginas.</p>
                             <p>En el inicio cuenta con una galería de fotos en carrousel de 10 imágenes.</p>
                             <p>Todas las páginas son Responsivas, Es decir: se adapta a distintos tamaños de pantalla.</p>
-                            <a href="./budgetform.html">Únete ahora <i class="ri-arrow-right-line"></i></a>
+                            <a class="bGD" href="./budgetform.html">Únete ahora <i class="ri-arrow-right-line"></i></a>
                         </div>
                     </div>
-                    <div class="card">
-                        <div class="card-header"><h4>Road Cycling</h4></div>
+                    <div class="card SBC">
+                        <div class="card-header"><h4>Store-Bike</h4></div>
+                        <div class="card-header"><h4>Competicion</h4></div>
                         <div class="card-body">
-                            <img src="./images/roadcycling.png">
-                                <p>Road Cycling es un Sitio Web que cuenta con un inicio y 4 páginas.<p>
-                                <p>Cuenta con una galeria de fotos de 36 imágenes, las cuales cuentan con animaciones.<p>
-                                <p>2 de las 5 páginas cuentan con videos extraídos de YouTube.</p>
-                                <p>Todas las páginas son responsivas, Es decir; se adapta a distintos tamaños de pantalla.</p>
-                                <a href="./budgetform.html">Únete ahora <i class="ri-arrow-right-line"></i></a>
+                            <img src="./images/EcommerceBike.jpeg" class="imgSBC">
+                                <p>Store Bike Competicion es un E-Commerce.<p>
+                                <p>Cuenta con tarjetas de producto con animaciones.<p>
+                                <p>Sitio Web totalmente Responsivas, Es decir; se adapta a distintos tamaños de pantalla.</p>
+                                <a class="bSBC" href="./budgetform.html">Únete ahora <i class="ri-arrow-right-line"></i></a>
                         </div>
                     </div>
                 </section>
